--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=8.0",
+        "php": "^8.0",
         "codeigniter4/framework": "^4",
         "firebase/php-jwt": "^6.0"
     },
